add url tags and image tags

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <!-- SEO meta tags
         ================================================== -->
     <meta name="description" content="Mendoza Roofing Company Wilmington offers roof repair and replacement. If you are looking for an Affordable and responsible  Roofing Company you will want to give us a chance!. Call us today for your free estimate Mendoza Roofing." />
-    <!-- <link rel="canonical" href="https://.com/" /> -->
+    <link rel="canonical" href="https://roofingmendoza.com/" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Mendoza Roofing Company | Mendoza Roofing Company" />
     <meta property="og:description" content="Mendoza Roofing Company Wilmington offers roof repair and replacement. If you are looking for an Affordable and responsible  Roofing Company you will want to give us a chance!. Call us today for your free estimate Mendoza Roofing." />
-    <!-- <meta property="og:url" content="https://bakerroofing.com/wilmington-roofing-company/" /> -->
+    <meta property="og:url" content="https://roofingmendoza.com/" />
     <meta property="og:site_name" content="Mendoza Roofing Company" />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:description" content="Mendoza Roofing Company Wilmington offers roof repair and replacement. If you are looking for an Affordable and responsible  Roofing Company you will want to give us a chance!. Call us today for your free estimate Mendoza Roofing." />
@@ -52,7 +52,7 @@
     <meta property="og:image:height" content="865">
     <meta property="og:title" content="Mendoza Roofing Company Wilmington Area">
     <meta property="og:description" content="Mendoza Roofing Company Wilmington offers roof repair and replacement. If you are looking for an Affordable and responsible  Roofing Company you will want to give us a chance!. Call us today for your free estimate Mendoza Roofing.">
-    <!-- <meta property="og:url" content="http://roofingmendoza.com"> -->
+    <meta property="og:url" content="https://roofingmendoza.com">
     <meta property="og:image" content="https://roofingmendoza.com/og-image.jpg">
 
 
