--- a/index.html
+++ b/index.html
@@ -55,7 +55,17 @@
     <meta property="og:url" content="https://roofingmendoza.com">
     <meta property="og:image" content="https://roofingmendoza.com/og-image.jpg">
 
-
+    <!-- Hotjar Tracking Code for https://roofingmendoza.com -->
+    <script>
+        (function (h, o, t, j, a, r) {
+            h.hj = h.hj || function () { (h.hj.q = h.hj.q || []).push(arguments) };
+            h._hjSettings = { hjid: 1117574, hjsv: 6 };
+            a = o.getElementsByTagName('head')[0];
+            r = o.createElement('script'); r.async = 1;
+            r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+            a.appendChild(r);
+        })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
+    </script>
 
 </head>
 
