--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     Mendoza Roofing Company Wilmington offers roof repair and replacement. If you are looking for a Afortable and responsable  Roofing Company you will want to give us a chance!. Call us today for you free stimate Mendoza Roofing.
                     </p>
                     <div class="home-content__subscribe">
-                        <a href="tel:386-290-8697" class="btn">Call Now</a>
+                        <a href="tel:9103677628" class="btn">Call Now</a>
                     </div>
                     <!-- <div class="home-content__subscribe">
                         <form id="mc-form" class="group" novalidate="true">
@@ -181,7 +181,7 @@
                 roof construction and siding installation in Wilmington, NC and near Wilmington area. We offer professional building services for
                 residential, commercial and industrial customers in the Wilmington area and beyond. If your home or business is in
                 Wilmington, Mendoza Roofing is the best choice to meet your roof repair and construction. Give our
-                Wilmington area  roofing Office a call at <a href="tel:+9103677628" class="info-phone">910-367-7628</a>.</p>
+                Wilmington area  roofing Office a call at <a href="tel:9103677628" class="info-phone">910-367-7628</a>.</p>
                 <p>
                 Mendoza Roofing wilmington  offers <a class="info-phone">free estimates</a> and information to ensure it meets not only the right solution, but the right price!
                 </p>
